--- a/AvalonDock/AvalonDock.Theme.VS2010/Theme.xaml
+++ b/AvalonDock/AvalonDock.Theme.VS2010/Theme.xaml
@@ -70,7 +70,7 @@
                                 KeyboardNavigation.DirectionalNavigation="Contained"
                                 Grid.Row="1" 
                                 KeyboardNavigation.TabIndex="2" 
-                                KeyboardNavigation.TabNavigation="Local"
+                                KeyboardNavigation.TabNavigation="Cycle"
                                 CornerRadius="3"
                                 Padding="0,3,0,3">
                             <ContentPresenter x:Name="PART_SelectedContentHost" 
@@ -238,7 +238,7 @@
                                 Grid.Column="0" 
                                 KeyboardNavigation.DirectionalNavigation="Contained"
                                 Grid.Row="0" KeyboardNavigation.TabIndex="2" 
-                                KeyboardNavigation.TabNavigation="Local">
+                                KeyboardNavigation.TabNavigation="Cycle">
                             <ContentPresenter x:Name="PART_SelectedContentHost"
                                               ContentSource="SelectedContent" 
                                               Margin="{TemplateBinding Padding}"
