--- a/AvalonDock/AvalonDock.Theme.VS2010/Theme.xaml
+++ b/AvalonDock/AvalonDock.Theme.VS2010/Theme.xaml
@@ -1107,14 +1107,14 @@
                                 CornerRadius="3"
                                 Background="{DynamicResource AvalonDock_ThemeVS2010_BaseColor2}"
                                 BorderBrush="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}">
-                            <Grid Margin="5">
+                            <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="54"/>
                                     <RowDefinition Height="*"/>
-                                    <RowDefinition Height="42"/>
+                                    <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
 
-                                <Grid>
+                                <Grid Margin="5">
                                     <Grid.RowDefinitions>
                                         <RowDefinition/>
                                         <RowDefinition/>
@@ -1134,8 +1134,8 @@
                                         BorderBrush="{DynamicResource AvalonDock_ThemeVS2010_BaseColor11}"
                                         BorderThickness="0,1,0,0"
                                         Background="{DynamicResource AvalonDock_ThemeVS2010_BaseColor7}"
-                                        >
-                                    <Grid >
+                                        MinHeight="200" >
+                                    <Grid  Margin="5">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto"/>
                                             <ColumnDefinition/>
@@ -1190,7 +1190,7 @@
                                     </Grid>
                                 </Border>
 
-                                <Grid Grid.Row="2">
+                                <Grid Grid.Row="2" Margin="5">
                                     <TextBlock Text="{Binding SelectedDocument.LayoutElement.ToolTip}" VerticalAlignment="Center"/>
                                 </Grid>
                             </Grid>
