Build 2.0.0804 - Fixed #15182, Added ILayoutUpdateStrategy sample usage code, Added DropTargetBase.IsDraggingOver
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@91549 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -82,11 +82,14 @@
                     </local:PanesStyleSelector.FileStyle>
                 </local:PanesStyleSelector>
             </avalonDock:DockingManager.LayoutItemContainerStyleSelector>
+            <avalonDock:DockingManager.LayoutUpdateStrategy>
+                <local:LayoutInitializer/>
+            </avalonDock:DockingManager.LayoutUpdateStrategy>
             
             <avalonDock:LayoutRoot>
-                <avalonDock:LayoutPanel>
+                <avalonDock:LayoutPanel Orientation="Vertical">
                     <avalonDock:LayoutDocumentPane/>
-                    <avalonDock:LayoutAnchorablePane DockWidth="150">
+                    <avalonDock:LayoutAnchorablePane Name="ToolsPane" DockWidth="150">
                     </avalonDock:LayoutAnchorablePane>
                 </avalonDock:LayoutPanel>
             </avalonDock:LayoutRoot>
